{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 84,
  "lineage": "1dcb07f9-6ef1-feab-da47-51d50a960a90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00782a7608c7fc226",
            "arn": "arn:aws:ec2:ap-south-1:643568907817:instance/i-0a7154621dc2ecdd4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7154621dc2ecdd4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0407fc075db84dd16",
            "private_dns": "ip-192-168-0-150.ap-south-1.compute.internal",
            "private_ip": "192.168.0.150",
            "public_ip": "15.206.93.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b8f66a48418ad85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053fcda267b3046bc",
            "tags": {
              "name": "webserver"
            },
            "tags_all": {
              "name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ee542af8f9b02aa"
            ]
          },
          "dependencies": [
            "aws_security_group.websg",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ntire_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:643568907817:internet-gateway/igw-0cf7b26ba2a34af6b",
            "id": "igw-0cf7b26ba2a34af6b",
            "owner_id": "643568907817",
            "tags": {
              "name": "ntire-igw"
            },
            "tags_all": {
              "name": "ntire-igw"
            },
            "vpc_id": "vpc-00ff944d586355015"
          },
          "dependencies": [
            "aws_vpc.ntire"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cf7b26ba2a34af6b",
            "id": "r-rtb-0dba2d73987347b371800626012",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dba2d73987347b37",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.pulicrt",
            "aws_vpc.ntire",
            "aws_internet_gateway.ntire_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pulicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:643568907817:route-table/rtb-0dba2d73987347b37",
            "id": "rtb-0dba2d73987347b37",
            "owner_id": "643568907817",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "ntire-publicrt"
            },
            "tags_all": {
              "name": "ntire-publicrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ff944d586355015"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ntire"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0448044393cf43e9e",
            "route_table_id": "rtb-0dba2d73987347b37",
            "subnet_id": "subnet-053fcda267b3046bc"
          },
          "dependencies": [
            "aws_route_table.pulicrt",
            "aws_subnet.subnets",
            "aws_vpc.ntire"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0334be2e7bf32a3e7",
            "route_table_id": "rtb-0dba2d73987347b37",
            "subnet_id": "subnet-002a558c74d885d4d"
          },
          "dependencies": [
            "aws_route_table.pulicrt",
            "aws_subnet.subnets",
            "aws_vpc.ntire"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:643568907817:security-group/sg-05ee542af8f9b02aa",
            "description": "open ssh and http",
            "egress": [],
            "id": "sg-05ee542af8f9b02aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "openhttp",
            "name_prefix": "",
            "owner_id": "643568907817",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "open http"
            },
            "tags_all": {
              "name": "open http"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ff944d586355015"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ntire"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "webSGhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3852784636",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05ee542af8f9b02aa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.ntire"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:643568907817:subnet/subnet-053fcda267b3046bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-053fcda267b3046bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643568907817",
            "tags": {
              "Name": "Dev"
            },
            "tags_all": {
              "Name": "Dev"
            },
            "vpc_id": "vpc-00ff944d586355015"
          },
          "dependencies": [
            "aws_vpc.ntire"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:643568907817:subnet/subnet-095f207da699074d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-095f207da699074d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643568907817",
            "tags": {
              "Name": "PROD"
            },
            "tags_all": {
              "Name": "PROD"
            },
            "vpc_id": "vpc-00ff944d586355015"
          },
          "dependencies": [
            "aws_vpc.ntire"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:643568907817:subnet/subnet-0fb8c173e4220ad93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0fb8c173e4220ad93",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643568907817",
            "tags": {
              "Name": "QA"
            },
            "tags_all": {
              "Name": "QA"
            },
            "vpc_id": "vpc-00ff944d586355015"
          },
          "dependencies": [
            "aws_vpc.ntire"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:643568907817:subnet/subnet-002a558c74d885d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-002a558c74d885d4d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643568907817",
            "tags": {
              "Name": "Dev2"
            },
            "tags_all": {
              "Name": "Dev2"
            },
            "vpc_id": "vpc-00ff944d586355015"
          },
          "dependencies": [
            "aws_vpc.ntire"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:643568907817:subnet/subnet-061d2fb51315b449a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-061d2fb51315b449a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643568907817",
            "tags": {
              "Name": "PROD2"
            },
            "tags_all": {
              "Name": "PROD2"
            },
            "vpc_id": "vpc-00ff944d586355015"
          },
          "dependencies": [
            "aws_vpc.ntire"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:643568907817:subnet/subnet-0e8f80fb57933f2b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-0e8f80fb57933f2b5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643568907817",
            "tags": {
              "Name": "QA2"
            },
            "tags_all": {
              "Name": "QA2"
            },
            "vpc_id": "vpc-00ff944d586355015"
          },
          "dependencies": [
            "aws_vpc.ntire"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ntire",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:643568907817:vpc/vpc-00ff944d586355015",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e03f6840715a78cf",
            "default_route_table_id": "rtb-0138d0771406646f5",
            "default_security_group_id": "sg-0de991f4f7f138a9a",
            "dhcp_options_id": "dopt-d604abbd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00ff944d586355015",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0138d0771406646f5",
            "owner_id": "643568907817",
            "tags": {
              "Name": "Network"
            },
            "tags_all": {
              "Name": "Network"
            }
          }
        }
      ]
    }
  ]
}